force-app/main/default/objects/Commissions_Earned__c/Commissions_Earned__c.object-meta.xml
<CustomObject>
    <label>Commissions Earned</label>
    <nameField>
        <displayFormat>COE-{000}</displayFormat>
        <label>Commissions Earned Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions Earned</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>