force-app/main/default/objects/Commissions_Earned__c/fields/Affiliate_Offer__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliate Offer</label>
    <referenceTo>Affiliate_Offer__c</referenceTo>
    <relationshipLabel>Commissions Earned</relationshipLabel>
    <relationshipName>Commissions_Earned</relationshipName>
    <type>Lookup</type>
</CustomField>