force-app/main/default/objects/Commissions_Earned__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer</label>
    <referenceTo>Offer__c</referenceTo>
    <relationshipLabel>Commissions Earned</relationshipLabel>
    <relationshipName>Commissions_Earned</relationshipName>
    <type>Lookup</type>
</CustomField>