force-app/main/default/objects/Commissions_Earned__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Commissions Earned</relationshipLabel>
    <relationshipName>Commissions_Earned</relationshipName>
    <type>Lookup</type>
</CustomField>