force-app/main/default/objects/Commissions_Earned__c/fields/Payouts__c.field-meta.xml
<CustomField>
    <fullName>Payouts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payout</label>
    <referenceTo>Payouts__c</referenceTo>
    <relationshipLabel>Commissions Earned</relationshipLabel>
    <relationshipName>Commissions_Earned</relationshipName>
    <type>Lookup</type>
</CustomField>