force-app/main/default/objects/Commissions_Earned__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Commissions Earned</relationshipLabel>
    <relationshipName>Commissions_Earned</relationshipName>
    <type>Lookup</type>
</CustomField>