force-app/main/default/objects/Commissions_Earned__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Available for Withdrawal</fullName>
            </value>
            <value>
                <fullName>Not Available for Withdrawal</fullName>
                <default>true</default>
                <label>Not Available for Withdrawal</label>
            </value>
            <value>
                <fullName>Pending Withdrawal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>